feat: some security updates
